apps/store/makeline-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makeline-service
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: makeline-service
  template:
    metadata:
      labels:
        app: makeline-service
        tier: backend
    spec:
      containers:
      - name: makeline-service
        image: ghcr.io/azure-samples/aks-store-demo/makeline-service:latest
        ports:
        - containerPort: 3001
        resources:
          requests: { cpu: 1m, memory: 6Mi }
          limits:   { cpu: 200m, memory: 128Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: makeline-service
  namespace: store
spec:
  selector:
    app: makeline-service
  ports:
  - port: 3001
    targetPort: 3001
