apps/store/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mcr.microsoft.com/mirror/docker/library/mongo:4.2
        ports:
        - containerPort: 27017
          name: mongodb
        resources:
          requests: { cpu: 5m, memory: 75Mi }
          limits:   { cpu: 250m, memory: 256Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: store
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
