apps/store/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
        tier: backend
    spec:
      containers:
      - name: order-service
        image: acrstoreexample.azurecr.io/order-service:2
        ports:
        - containerPort: 3000
        resources:
          requests: { cpu: 1m, memory: 50Mi }
          limits:   { cpu: 300m, memory: 256Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: store
spec:
  selector:
    app: order-service
  ports:
  - port: 3000
    targetPort: 3000
