apps/store/store-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-admin
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-admin
  template:
    metadata:
      labels:
        app: store-admin
        tier: frontend
    spec:
      containers:
      - name: store-admin
        image: acrstoreexample.azurecr.io/store-admin:8
        ports:
        - containerPort: 8081
          name: store-admin
        resources:
          requests: { cpu: 1m, memory: 200Mi }
          limits:   { cpu: 1000m, memory: 512Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: store-admin
  namespace: store
spec:
  selector:
    app: store-admin
  ports:
  - port: 80
    targetPort: 8081
