apps/store/store-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-front
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-front
  template:
    metadata:
      labels:
        app: store-front
        tier: frontend
    spec:
      containers:
      - name: store-front
        image: acrstoreexample.azurecr.io/store-front:7
        ports:
        - containerPort: 8080
          name: store-front
        resources:
          requests: { cpu: 1m, memory: 200Mi }
          limits:   { cpu: 1000m, memory: 512Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: store-front
  namespace: store
spec:
  selector:
    app: store-front
  ports:
  - port: 80
    targetPort: 8080
